[package]
name = "mvm-addon-dns"
version.workspace = true
edition.workspace = true
description = "In-guest DNS resolver for configured local addon hostnames"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mvm-addon-dns"
path = "src/bin/mvm-addon-dns.rs"

[dependencies]
mvm-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# hickory-dns: mature DNS resolver/server used by Cloudflare's Pingora.
hickory-server.workspace = true
hickory-proto.workspace = true

[dev-dependencies]
tempfile.workspace = true
