[package]
name = "mvm-addon-vsock-bridge"
version.workspace = true
edition.workspace = true
description = "In-guest TCP↔vsock bridge for local addon traffic"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mvm-addon-vsock-bridge"
path = "src/bin/mvm-addon-vsock-bridge.rs"

[dependencies]
mvm-core.workspace = true
anyhow.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
