[package]
name = "mvm-agent"
version.workspace = true
edition.workspace = true
description = "Reconcile engine, coordinator client, and ops facade for mvm"

[dependencies]
mvm-core = { path = "../mvm-core" }
mvm-runtime = { path = "../mvm-runtime" }
mvm-build = { path = "../mvm-build" }
mvm-guest = { path = "../mvm-guest" }
anyhow.workspace = true
chrono.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
