[package]
name = "mvm-audit-signer"
version.workspace = true
edition.workspace = true
description = "Audit chain-signer subprocess — sole writer to ~/.mvm/audit/<tenant>.jsonl (Plan 104 §H-L1.2, ADR-061)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# One of the four per-VM subprocesses (mvm-broker, mvm-secrets-dispatcher,
# mvm-host-signer, mvm-audit-signer). Runs at uid 905. **Sole writer to
# the audit chain JSONL** and **sole holder of the audit chain-signing
# key**. The supervisor routes typed audit entries to it over a per-VM
# UDS; this subprocess JCS-canonicalizes the entry (Plan 104 §S28), signs
# it, computes the new chain head, persists it to a secondary location
# for anti-rollback (§H-L5.2), and appends to the JSONL via an
# `O_APPEND`-only FD (§H-L5.1).
#
# W1b.1 ships the canonical pipeline (in-memory key + O_APPEND FD +
# secondary head persistence + JCS canonicalization). The encryption-at-
# rest layer (§H-L5.4, per-tenant ChaCha20-Poly1305 derived from
# TPM/SE master) lands with W8. The dir-immutable flag (`chattr +a`
# on Linux, `UF_APPEND` on macOS) is wired by the supervisor side
# at directory setup time — W1b.2.

[lib]
name = "mvm_audit_signer"
path = "src/lib.rs"

[[bin]]
name = "mvm-audit-signer"
path = "src/bin/mvm-audit-signer.rs"

[dependencies]
anyhow.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
mvm-core.workspace = true
rand = { workspace = true }
serde.workspace = true
serde_json.workspace = true
# RFC 8785 JSON Canonicalization Scheme. Required for stable
# bytes-to-sign across implementations (Plan 104 §S28). First
# workspace consumer; if a second crate wants it later, promote
# to workspace.dependencies.
serde_jcs = "0.1"
sha2.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
