[package]
name = "mvm-backend"
version.workspace = true
edition.workspace = true
description = "VmBackend implementations for mvm — Apple Container, Cloud Hypervisor, Docker, libkrun, microsandbox"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# ── What this crate owns ───────────────────────────────────────────
#
# Concrete `VmBackend` implementations that are *not* coupled to the
# Lima-era Firecracker substrate (`vm::microvm`, `vm::image`,
# `vm::firecracker` helpers, the `run_in_vm` shell shim, etc.).
# Plan-60 W7 moved these out of `mvm/src/vm/` so the alt
# backends can sit *below* `mvm` in the dependency graph,
# breaking the previous facade-only re-export pattern.
#
# Lives here:
#   - apple_container.rs   (macOS 26+ Apple Virtualization.framework)
#   - cloud_hypervisor.rs  (Tier 1 KVM peer of Firecracker; opt-in)
#   - docker.rs            (Tier 3 fallback)
#   - libkrun.rs           (raw libkrun shim — Linux KVM / macOS HVF)
#   - microsandbox.rs      (libkrun-backed sandbox; Phase 1 default)
#
# Stays in `mvm` (W8 will move):
#   - firecracker.rs (Lima-era installer helpers)
#   - microvm.rs (Firecracker lifecycle via `run_in_vm`)
#   - microvm_nix.rs (Firecracker via microvm.nix runner)
#   - vm/backend.rs (`AnyBackend` dispatch + `FirecrackerBackend`)
#
# `mvm`'s `vm::backend.rs` imports the alt backends from this
# crate to populate the `AnyBackend` dispatch enum. That direction —
# `mvm` → `mvm-backend` — is the post-W7 invariant; the
# previous `mvm-backend` → `mvm` re-export façade is gone.
[dependencies]
mvm-core.workspace = true
mvm-guest.workspace = true
mvm-base.workspace = true
mvm-providers.workspace = true

anyhow.workspace = true
# microsandbox pulls sqlx-sqlite -> libsqlite3-sys (links = "sqlite3"),
# which collides with library consumers that already link sqlite via a
# different libsqlite3-sys version (notably mvmd-gateway's rusqlite per
# its ADR-0003). Gating the dep on `backends-microsandbox` lets those
# consumers do `default-features = false` on `mvmctl` and skip the
# collision; the mvm binary keeps the backend by leaving the feature
# default-on through the forwarding chain in mvm-cli + mvmctl.
microsandbox = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
mvm-build.workspace = true

[features]
# `backends-microsandbox` is default-on so `cargo {build,test} -p mvm-backend`
# exercises the same code paths the mvmctl binary does. The mvmctl facade,
# mvm-cli, and the mvm crate all declare `default-features = false` on their
# mvm-backend dep and re-forward the feature, so library consumers (e.g. mvmd)
# can disable the whole chain via `mvmctl { default-features = false }`.
default = ["backends-microsandbox"]
backends-microsandbox = ["dep:microsandbox"]

[lints]
workspace = true
