[package]
name = "mvm-backend"
version.workspace = true
edition.workspace = true
description = "VmBackend implementations for mvm — Apple Container, Cloud Hypervisor, Docker, libkrun"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# ── What this crate owns ───────────────────────────────────────────
#
# Concrete `VmBackend` implementations that are *not* coupled to the
# Lima-era Firecracker substrate (`vm::microvm`, `vm::image`,
# `vm::firecracker` helpers, the `run_in_vm` shell shim, etc.).
# Plan-60 W7 moved these out of `mvm/src/vm/` so the alt
# backends can sit *below* `mvm` in the dependency graph,
# breaking the previous facade-only re-export pattern.
#
# Lives here:
#   - apple_container.rs   (macOS 26+ Apple Virtualization.framework)
#   - cloud_hypervisor.rs  (Tier 1 KVM peer of Firecracker; opt-in)
#   - docker.rs            (Tier 3 fallback)
#   - libkrun.rs           (raw libkrun shim — Linux KVM / macOS HVF)
#
# Stays in `mvm` (W8 will move):
#   - firecracker.rs (Lima-era installer helpers)
#   - microvm.rs (Firecracker lifecycle via `run_in_vm`)
#   - microvm_nix.rs (Firecracker via microvm.nix runner)
#   - vm/backend.rs (`AnyBackend` dispatch + `FirecrackerBackend`)
#
# `mvm`'s `vm::backend.rs` imports the alt backends from this
# crate to populate the `AnyBackend` dispatch enum. That direction —
# `mvm` → `mvm-backend` — is the post-W7 invariant; the
# previous `mvm-backend` → `mvm` re-export façade is gone.
[dependencies]
mvm-core.workspace = true
mvm-guest.workspace = true
mvm-base.workspace = true
mvm-providers.workspace = true
mvm-libkrun.workspace = true

anyhow.workspace = true
# `libc` for `kill(pid, 0)` liveness probes + SIGTERM/SIGKILL signaling
# in `LibkrunBackend::{stop, status, list}`. `which` for the
# supervisor-binary path resolver fallback (after env override + adjacent
# to current exe, fall back to PATH lookup).
libc.workspace = true
which.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
mvm-build.workspace = true

[features]
default = []

[lints]
workspace = true
