[package]
name = "mvm-broker"
version.workspace = true
edition.workspace = true
description = "Host services broker subprocess — hosts host.time.v1 / host.cost.v1 / broker.v1 (Plan 104 W1a; Plan 104 §H-L1.3)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[package.metadata.mvm.architecture]
substrate_server_category = "per-workload broker subprocess substrate"

# The broker is one of the four per-VM subprocesses spawned by the
# supervisor (Plan 104 §"Host-side: four-subprocess architecture"; ADR-061
# §"Decision"). It runs at uid 903 with seccomp + setpriv + per-workload
# cgroup + namespace isolation — none of that lives in this crate. The
# crate produces a binary the supervisor cosign-verifies and spawns; the
# isolation knobs are wired by the supervisor lifecycle code (lands in W1b)
# and the doctor host-posture checks (lands in W1b too).
#
# W1a ships only the dispatch-loop skeleton + the UDS listener wiring +
# config-envelope read. Actual handlers (host.time.v1, host.cost.v1,
# broker.v1) ship in W3, W4a, W3 respectively. Every call returns
# `Err(NotBound)` until the registry has handlers — that's the W1a
# acceptance criterion ("Both brokers reject every call with `NotBound`"
# in Plan 104 §Build sequence).

[lib]
name = "mvm_broker"
path = "src/lib.rs"

[[bin]]
name = "mvm-broker"
path = "src/bin/mvm-broker.rs"

[dependencies]
anyhow.workspace = true
mvm-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
