[package]
name = "mvm-build"
version.workspace = true
edition.workspace = true
description = "Nix builder pipeline and artifact cache for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# Plan 74 W1.3 — OCI layer unpack to a staging rootfs. `tar` and
# `flate2` are workspace deps already (used by `mvm-sdk`'s addon
# tarball pipeline at the same pinned versions). `oci_to_rootfs`
# in this crate stays plain-tar-on-Read; gzip and zstd decoding
# happen at the caller's boundary (W1.5 CLI orchestrator) so the
# unpacker can be exercised against in-memory fixtures without
# pulling a decompressor in for each test.
flate2.workspace = true
tar.workspace = true

mvm-core.workspace = true
mvm-guest.workspace = true
# Plan 73 Followup B.1 — `install_app_deps` reuses
# `mvm_sdk::compile::deps_audit::{verify_sealed_volume, VolumeError}`
# for cache-hit verification. The orchestrator owns the cache
# probe + miss-path placeholder; the audit primitives stay in
# `mvm-sdk` so the supervisor and the builder VM go through the
# same types.
mvm-sdk.workspace = true
anyhow.workspace = true
chrono.workspace = true
# Plan 72 W1: optional libkrun FFI dep for the in-tree builder VM
# launcher (`libkrun_builder::LibkrunBuilderVm`). Gated by
# `backends-builder-vm-libkrun`; default-off until Plan 72 W5
# cutover flips polarity.
mvm-libkrun = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# Plan 74 W1.4b.4 — `download_runtime_overlay` stages files into a
# temp dir before atomic install into the cache. Promoted from a
# dev-dep so lib code (not just tests) can reach it.
tempfile.workspace = true
thiserror = "1"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
which = "6"

[features]
default = []
# Plan 72 W1: libkrun-direct builder VM launcher (default-off
# scaffolding through W4; default-on after W5 cutover). Pulls
# the `mvm-libkrun` FFI crate which itself gates the underlying
# `libkrun-sys` bindings.
backends-builder-vm-libkrun = ["dep:mvm-libkrun"]

[lints]
workspace = true
