[package]
name = "mvm-build"
version.workspace = true
edition.workspace = true
description = "Nix builder pipeline and artifact cache for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
# Plan 74 W1.3 — OCI layer unpack to a staging rootfs. `tar` and
# `flate2` are workspace deps already (used by `mvm-sdk`'s addon
# tarball pipeline at the same pinned versions). `oci_to_rootfs`
# in this crate stays plain-tar-on-Read; gzip and zstd decoding
# happen at the caller's boundary (W1.5 CLI orchestrator) so the
# unpacker can be exercised against in-memory fixtures without
# pulling a decompressor in for each test.
flate2.workspace = true
tar.workspace = true
# Plan 91 W1 — Stage 0 bootstrap fetches Alpine's official
# minirootfs and verifies it against Alpine's release-signing key
# (Natanael Copa, RSA fingerprint
# 0482D84022F52DF1C4E7CD43293ACD0907D9495A). `pgp` (rpgp) is
# pure-Rust, supports detached signature verification, and stays
# within our deny.toml-licensed dep set. Default features include
# bzip2 which we don't need for armored ASCII signatures — disable
# them to keep the dep closure tight.
pgp = { version = "0.17", default-features = false }

mvm-core.workspace = true
mvm-guest.workspace = true
# Plan 73 Followup B.1 — `install_app_deps` reuses
# `mvm_sdk::compile::deps_audit::{verify_sealed_volume, VolumeError}`
# for cache-hit verification. The orchestrator owns the cache
# probe + miss-path placeholder; the audit primitives stay in
# `mvm-sdk` so the supervisor and the builder VM go through the
# same types.
mvm-sdk.workspace = true
anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
hex.workspace = true
reqwest = { workspace = true, default-features = false, features = ["blocking", "rustls-tls"] }
# Plan 72 W1: optional libkrun FFI dep for the in-tree builder VM
# launcher (`libkrun_builder::LibkrunBuilderVm`). Gated by
# `builder-vm`; default-off until Plan 72 W5
# cutover flips polarity.
mvm-libkrun = { workspace = true, optional = true }
# Plan 97 Phase C — `VzBuilderBackend` builds a `vz::SupervisorConfig`
# JSON document and pipes it to the Swift `mvm-vz-supervisor`. The
# crate is pure types (no C linkage, no platform-specific deps) so
# it costs nothing on non-macOS hosts; the runtime spawn bails when
# Vz isn't available.
mvm-vz.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
# Plan 76 Phase 6 — `.mvm` packed artifacts carry an Ed25519
# manifest signature. We verify (and produce, when the caller
# hands us a signing key) signatures inside this crate so the
# format library is self-contained; the CLI passes the host
# signer's key bytes in.
ed25519-dalek.workspace = true
# Plan 74 W1.4b.4 — `download_runtime_overlay` stages files into a
# temp dir before atomic install into the cache. Promoted from a
# dev-dep so lib code (not just tests) can reach it.
tempfile.workspace = true
thiserror = "1"
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
# Plan 89 W2 — `builder_protocol::{BuilderRequest,BuilderResponse}`
# carry a `JobId(Uuid)` to disambiguate concurrent dispatches over
# the persistent VM channel. Existing mvm-core / mvm-cli call sites
# already pull in the same version.
uuid.workspace = true
# Plan 89 W3 part 7 — `persistent_builder::supervisor_alive`
# pokes the recorded supervisor PID with `kill(pid, 0)` before
# routing a build through the supervisor. Unix-only; gated with
# `#[cfg(unix)]` at the call site.
libc.workspace = true
which = "6"

[dev-dependencies]
# Plan 76 Phase 6 — `packed_artifact::tests` generate Ed25519
# keypairs for round-trip tests. ed25519-dalek's
# `SigningKey::generate` takes any `CryptoRng + RngCore`; the
# concrete `OsRng` lives in `rand`.
rand = "0.8"

[features]
default = []
# Plan 72 W1: libkrun-direct builder VM launcher. Pulls the
# `mvm-libkrun` FFI crate which itself gates the underlying
# `libkrun-sys` bindings.
contributor-bootstrap = []
builder-vm = ["dep:mvm-libkrun"]

[lints]
workspace = true
