[package]
name = "mvm-builder-init"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "PID 1 for the mvm builder microVM — mounts pseudofs + /dev/vdb /nix store, runs /job/cmd.sh, powers off"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "mvm-builder-init"
path = "src/main.rs"

[dependencies]
# libc is the only runtime dep on Linux — every system call goes
# through it. No serde / tokio / anyhow: the binary needs to stay
# under the 1.5 MiB plan-72 W3 budget and start in well under 8 s
# from `init=` exec to /job/cmd.sh launch.
[target.'cfg(target_os = "linux")'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
