[package]
name = "mvm-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "mvm_builder"
path = "src/lib.rs"

[[bin]]
name = "mvm-builder"
path = "bin/main.rs"

[dependencies]
mvm-core = { workspace = true }
mvm-cli = { workspace = true }
anyhow = { workspace = true }
microsandbox = { workspace = true }
nix = { workspace = true }
clap = { workspace = true }
