[package]
name = "mvm-cli"
version.workspace = true
edition.workspace = true
description = "CLI commands, UI, and bootstrap for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
mvm-guest.workspace = true
# `default-features = false` keeps optional runtime backends out of lean
# library closures unless explicitly requested.
mvm = { workspace = true, default-features = false }
mvm-build = { workspace = true, default-features = false }
mvm-security.workspace = true
mvm-providers.workspace = true
mvm-libkrun.workspace = true
mvm-backend = { workspace = true, default-features = false }
mvm-mcp.workspace = true
mvm-plan.workspace = true
mvm-policy.workspace = true
mvm-supervisor.workspace = true
# SDK port Phase 2c — `mvmctl compile` reads the Workload IR and routes
# it through the compile pipeline.
mvm-ir.workspace = true
mvm-sdk.workspace = true
anyhow.workspace = true
# Plan 60 Phase 7a Slice D — `mvmctl audit verify-cert` decodes
# base64 destruction-cert signatures + pubkeys.
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
names.workspace = true
rand.workspace = true
secrecy.workspace = true
uuid.workspace = true
clap.workspace = true
reqwest.workspace = true
clap_complete.workspace = true
colored.workspace = true
ctrlc.workspace = true
libc.workspace = true
indicatif.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
tempfile.workspace = true
toml.workspace = true
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt"] }
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
ed25519-dalek.workspace = true
predicates.workspace = true
rand.workspace = true

[features]
# Plan 72 W5.B cutover: `backends-builder-vm-libkrun` is now default so
# `mvmctl dev up` prefers the libkrun-backed builder VM (64 GiB
# persistent /nix store). Library consumers that don't want the
# libkrun FFI in their closure build with `default-features = false`.
# Runtime gating via `mvm_libkrun::is_available()` still falls back
# cleanly when libkrun isn't installed on the host.
default = ["backends-builder-vm-libkrun"]
backends-builder-vm-libkrun = ["mvm-build/backends-builder-vm-libkrun"]
custom-dns = ["mvm-supervisor/custom-dns"]
dev-watch = ["dep:notify", "dep:notify-debouncer-mini"]
manifest-verify = [
    "mvm/manifest-verify",
    "mvm-security/manifest-verify",
]
template-registry-s3 = ["mvm/template-registry-s3"]

[lints]
workspace = true
