[package]
name = "mvm-cli"
version.workspace = true
edition.workspace = true
description = "CLI commands, UI, and bootstrap for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
mvm-core.workspace = true
mvm-guest.workspace = true
mvm = { workspace = true, default-features = false }
mvm-build = { workspace = true, default-features = false }
mvm-security.workspace = true
mvm-providers.workspace = true
mvm-libkrun.workspace = true
mvm-backend = { workspace = true, default-features = false }
mvm-mcp.workspace = true
mvm-oci.workspace = true
mvm-plan.workspace = true
mvm-policy.workspace = true
mvm-supervisor.workspace = true
# SDK port Phase 2c — `mvmctl compile` reads the Workload IR and routes
# it through the compile pipeline.
mvm-ir.workspace = true
mvm-sdk.workspace = true
anyhow.workspace = true
# Plan 60 Phase 7a Slice D — `mvmctl audit verify-cert` decodes
# base64 destruction-cert signatures + pubkeys.
base64.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
names.workspace = true
rand.workspace = true
secrecy.workspace = true
uuid.workspace = true
clap.workspace = true
reqwest.workspace = true
clap_complete.workspace = true
colored.workspace = true
ctrlc.workspace = true
libc.workspace = true
indicatif.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar = "0.4"
flate2.workspace = true
hex.workspace = true
tempfile.workspace = true
toml.workspace = true
notify = { workspace = true, optional = true }
notify-debouncer-mini = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util", "net", "rt", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[build-dependencies]
toml.workspace = true
sha2.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
ed25519-dalek.workspace = true
predicates.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true

[features]
# Plan 72 W5.B cutover: `builder-vm` is now default so `mvmctl dev up`
# prefers the libkrun-backed builder VM with a persistent /nix store.
# Runtime gating via `mvm_libkrun::is_available()` still falls back cleanly
# when libkrun isn't installed on the host.
default = ["builder-vm"]
contributor-bootstrap = [
    "mvm/contributor-bootstrap",
    "mvm-build/contributor-bootstrap",
    "mvm-backend/contributor-bootstrap",
]
builder-vm = ["mvm-build/builder-vm"]
# Plan 86 / Plan 72 W5.D bullet 10: extract libkrunfw's bundled
# TSI-patched kernel at runtime so Stage 0 boots a kernel where
# libkrun's AF_INET-over-vsock (TSI) path actually works. The feature
# is opt-in because normal CI and library consumers should not require
# libkrun headers. Builds that run the native libkrun path can enable it
# on hosts where libkrunfw is installed.
libkrun-sys = ["mvm-libkrun/libkrun-sys"]
# Plan 93 PR-10a: opt-in lane for the `bench microvm-launch` live probe
# test + its boot orchestration. Off by default so `cargo test
# --workspace` on stock CI stays VM-free (hosted macOS runners lack
# Hypervisor.framework nested virt for a libkrun guest). Enabled on a dev
# host / self-hosted macOS runner with the slp/krun Homebrew trio
# installed and an `mvm-libkrun-supervisor` available on the launch path.
# Pure test/codegate marker — mvm-cli spawns the supervisor as a
# subprocess and does not link libkrun itself.
libkrun-live = []
# Plan 77 W4: structural enforcement of the "no prebuilt builder VM artifact
# until release" invariant (see AGENTS.md / CLAUDE.md). When off — the default
# for every contributor build — `download_builder_vm_image` and its helpers
# are entirely cfg'd out, so a cache miss with no in-repo flake hard-errors
# at the source-checkout boundary rather than silently pulling a GitHub
# release artifact. The feature is only intended to be enabled when cutting
# an end-user-binary release that legitimately wants the download fallback.
release-artifact-bootstrap = []
custom-dns = ["mvm-supervisor/custom-dns"]
dev-watch = ["dep:notify", "dep:notify-debouncer-mini"]
manifest-verify = [
    "mvm/manifest-verify",
    "mvm-security/manifest-verify",
]
template-registry-s3 = ["mvm/template-registry-s3"]

[lints]
workspace = true
