[package]
name = "mvm-core"
version.workspace = true
edition.workspace = true
description = "Core types, IDs, config, and utilities for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
mvm-libkrun.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["io-util"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fs2.workspace = true
regex = "1"
tempfile.workspace = true
