[package]
name = "mvm-core"
version.workspace = true
edition.workspace = true
description = "Core types, IDs, config, and utilities for mvm"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
# Plan 104 §H-L3.6 / W1b.2b.3 — `protocol::signed_config` verifies
# subprocess startup config envelopes via Ed25519. The verify path
# is consumed by every subprocess crate at parse time; mvm-core is
# the natural home since it already owns the wire-format types.
ed25519-dalek.workspace = true
mvm-providers.workspace = true
mvm-libkrun.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror = "1"
tokio = { workspace = true, features = ["io-util"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
fs2.workspace = true
regex = "1"
tempfile.workspace = true
# Plan 74 W2 — `mandatory_deny_ranges` parses a small set of
# IPv4/IPv6 CIDRs (cloud metadata endpoint, link-local, CGNAT,
# host loopback). Workspace-pinned (already used by
# `mvm-supervisor::proxy::l4`).
ipnet = { workspace = true }

[dev-dependencies]
# `OsRng` for generating fresh ed25519 keys in signed_config tests
# without committing static fixtures.
rand.workspace = true

[lints]
workspace = true
