[package]
name = "mvm-egress-proxy"
version.workspace = true
edition.workspace = true
description = "HTTP CONNECT proxy with hostname allowlist for builder-VM egress (Plan 73 Followup B.2.x, ADR-047)"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# This is a Linux-only binary in production — it runs inside the
# libkrun builder VM as the only legal egress path during the
# application-deps install. On macOS / Windows the binary still
# compiles (workspace ergonomics for contributors) but `main()`
# prints a hint and exits 1, mirroring `mvm-host-vm-init`. The
# allowlist + CONNECT-parser modules are pure-Rust and cross-
# platform so `cargo test` exercises them on every developer host.
#
# No tokio: a CONNECT proxy is one thread per accepted socket
# (`std::net::TcpListener` + `std::thread::spawn`), so we save
# the ~3 MiB closure tokio drags in. mvm-host-vm-init's size
# budget cares about the init binary, not this one — but keeping
# the proxy slim too means a `nix build` of the builder VM
# rootfs doesn't balloon either.

[[bin]]
name = "mvm-egress-proxy"
path = "src/main.rs"

[lib]
name = "mvm_egress_proxy"
path = "src/lib.rs"

[features]
# Off by default. Tests + dev workflows enable it to point the
# proxy at a test allowlist via `MVM_EGRESS_ALLOWLIST=host1,host2`.
# Production binaries (built without features) ship the four
# ADR-047 hostnames hard-coded — no env-var override at all.
dev-shell = []

[target.'cfg(target_os = "linux")'.dependencies]
# Signal handling for SIGTERM-driven shutdown. Linux-only because
# the binary's main loop only compiles on Linux.
libc.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile.workspace = true
